# raytracer

./: Cargo.toml  README.md
src/: lib.rs  main.rs  scene.rs  utils.rs
src/core/: camera.rs  mod.rs  ray.rs  vector.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: aabb.rs  boxx.rs  bvh.rs  constant_medium.rs  flip_face.rs  hit_record.rs  hittable.rs  hittable_list.rs  mod.rs  moving_sphere.rs  object_list.rs  rotate_y.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/scene/: cornell_box.rs  cornell_smoke.rs  earth.rs  final_scene.rs  mod.rs  random_scene.rs  simple_light.rs  two_spheres.rs
src/textures/: checker.rs  image.rs  mod.rs  noise.rs  perlin.rs  solid_color.rs
