[package]
name = "raytracer"
version = "0.1.0"
authors = ["Mayank Tripathi <ryotsu@kochika.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
rand = "0.7"
image = { version = "0.23", default-features = false, features = ["jpeg"] }
